Fix broken layout with Athens gridster. Change slideToggle that wasn't working.

--- a/scss/test.scss
+++ b/scss/test.scss
@@ -205,8 +205,18 @@ input {
 
 #athensGridster {
   z-index: 10;
+  min-height: 1000px;
+  position: absolute;
+  top: 43px;
+  left: 140px;
+
   #athensGridsterTitle {
-    padding:10px;
+    padding: 0 0 31px 230px;
+  }
+
+  .gridster {
+    // background-color: white;
+    height: 1000px;
   }
 }
 
